Bugfix: Smart menu menu bar cuts off user menu on small displays, resolves #817

--- a/scss/boost_union/post.scss
+++ b/scss/boost_union/post.scss
@@ -1934,6 +1934,7 @@ body.theme_boost-union-footerbuttonnone.jsenabled {
             }
             /* The icon tag aligned top at the usermenu link */
             .usermenu .dropdown-menu {
+                max-height: calc(100vh - 170px);
                 .submenu {
                     /* Remove the padding on the User submenu header */
                     .header {
